# scsdk

./: .gitignore  .gitmodules  README.md
scsdk/: README.md  scsdk.podspec
scsdk/c++/: .gitattributes  .gitignore  CMakeLists.txt  README.md
scsdk/c++/scsdk/standard_cyborg/io/pbio/: GeometryPBIO.cpp  IMUPBIO.cpp  ImagePBIO.cpp  PerspectiveCameraPBIO.cpp  PolylinePBIO.cpp  ProtobagIO.cpp  SceneGraphNodePBIO.cpp  SceneGraphNodePBIO.hpp  SceneGraphPBIO.cpp  SceneGraphPBIO.hpp  TransformPBIO.hpp
scsdk/c++/scsdk/standard_cyborg/io/ply/: GeometryFileIO_PLY.cpp
scsdk/c++/scsdk/standard_cyborg/math/: TransformRegistry.cpp
scsdk/c++/scsdk/standard_cyborg/proto/math/: transform.pb.cc  transform.pb.h
scsdk/c++/scsdk/standard_cyborg/proto/sc3d/: triangle_mesh.pb.cc  triangle_mesh.pb.h
scsdk/c++/scsdk/standard_cyborg/proto/scene_graph/: scene_graph.pb.cc  scene_graph_node.pb.cc  scene_graph_node.pb.h
scsdk/c++/scsdk/standard_cyborg/sc3d/: ColorImage.cpp  DepthImage.cpp  Geometry.cpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
scsdk/c++/scsdkPython/: scsdk_native.cpp
scsdk/c++/scsdk_test/standard_cyborg/io/pbio/: CorePBIOTest.cpp  GeometryPBIOTest.cpp  ImagePBIOTest.cpp  PerspectiveCameraPBIOTest.cpp  PlanePBIOTest.cpp  PolylinePBIOTest.cpp  ProtobagIOTest.cpp  SceneGraphNodePBIOTest.cpp  SceneGraphPBIOTest.cpp  TestUtils.hpp
scsdk/ios/StandardCyborgFusion/: Info.plist
scsdk/proto/standard_cyborg/proto/math/: core.proto  tensor.proto  transform.proto
scsdk/proto/standard_cyborg/proto/sc3d/: image.proto  imu.proto  label_2d.proto  label_3d.proto  label_pair.proto  landmark.proto  perspective_camera.proto  plane.proto  point_cloud.proto  polygon_label.proto  polyline.proto  thumbs_value.proto  triangle_mesh.proto  video.proto
scsdk/proto/standard_cyborg/proto/scene_graph/: scene_graph.proto  scene_graph_node.proto
scsdk/python/: .gitignore  README.md  requirements.txt  setup.py
scsdk/python/scsdk_samples/: conversion.py  convert_bunny.py  node_types.py  proto_to_jpg.py  proto_to_obj.py  proto_to_polygon.py  triangle.py
scsdk/python/scsdk_test/: .gitattributes  test_scsdk_native.py  utils.py
scsdk/python/standard_cyborg/proto/math/: core_pb2.py  tensor_pb2.py  transform_pb2.py
scsdk/python/standard_cyborg/proto/sc3d/: image_pb2.py  imu_pb2.py  label_2d_pb2.py  label_3d_pb2.py  label_pair_pb2.py  landmark_pb2.py  perspective_camera_pb2.py  plane_pb2.py  point_cloud_pb2.py  polygon_label_pb2.py  polyline_pb2.py  thumbs_value_pb2.py  triangle_mesh_pb2.py  video_pb2.py
scsdk/python/standard_cyborg/proto/scene_graph/: scene_graph_node_pb2.py  scene_graph_pb2.py
